# WetbulbQAT

./: .pre-commit-config.yaml  README.md  requirements.txt
.github/workflows/: ci.yml  code_quality.yml
meteorological_equations/: pyproject.toml
tests/: _jit_solvers_test.py
