[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteorological-equations"
version = "0.1.0"
description = "High-performance meteorological equations using Numba (vapor pressure, thermodynamics, and more)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Cian Quezon", email = "your.email@example.com"}
]
maintainers = [
    {name = "Cian Quezon", email = "your.email@example.com"}
]
keywords = [
    "meteorology",
    "atmospheric-science",
    "vapor-pressure",
    "saturation",
    "thermodynamics",
    "numba",
    "Bolton",
    "Goff-Gratch",
    "Hyland-Wexler",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "numba>=0.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "psychrolib>=2.5.0",
    "metpy>=1.5.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "numpydoc>=1.5.0",
]
all = [
    "meteorological-equations[dev,test,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/meteorological-equations"
Documentation = "https://meteorological-equations.readthedocs.io"
Repository = "https://github.com/yourusername/meteorological-equations"
Issues = "https://github.com/yourusername/meteorological-equations/issues"
Changelog = "https://github.com/yourusername/meteorological-equations/blob/main/CHANGELOG.md"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.setuptools]
packages = ["meteorological_equations"]

[tool.setuptools.package-data]
meteorological_equations = ["py.typed"]

# ============================================================================
# pytest configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=meteorological_equations",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
]

# ============================================================================
# Coverage configuration
# ============================================================================

[tool.coverage.run]
branch = true
source = ["meteorological_equations"]
relative_files = true
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Black code formatter
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# Ruff linter
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["ARG", "SIM"]  # Allow unused args and complex expressions in tests

[tool.ruff.lint.isort]
known-first-party = ["meteorological_equations"]

# ============================================================================
# MyPy type checker
# ============================================================================

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = [
    "numba.*",
    "psychrolib.*",
    "metpy.*",
]
ignore_missing_imports = true

# ============================================================================
# isort (import sorting)
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true